# cigarfilter

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  setup.py
.circleci/: config.yml
cigarfilter/: __init__.py  cigarfilter_config.py  cigarfilter_main.py
cigarfilter/resources/: README.md
cigarfilter/resources/plugin_template/: CMakeLists.txt  conanfile.txt
cigarfilter/resources/test_data/: expected_example1.sam  expected_example2.sam  expected_example4.sam  expected_iterate_groups.sam  test_input_base.sam  test_input_example1.sam  test_input_example2.sam  test_input_example4.sam  test_input_iterate_groups.sam
conda-recipe/: meta.yaml
docs/: README.md
docs/html/: CIGAR_8cpp.html  CIGAR_8cpp__incl.dot  CIGAR_8hpp.html  CIGAR_8hpp__dep__incl.dot  CIGAR_8hpp__incl.dot  CIGAR_8hpp_source.html  CIGAR_8t_8cpp.html  CIGAR_8t_8cpp_8o_8d.html  CIGAR_8t_8cpp__incl.dot  CIGAR_8t_8cpp_a22267562988b84a060e8ec5bcdf25c2b_cgraph.dot  CIGAR_8t_8cpp_a85dc6b64257e0fac8b4d18743c48c932_cgraph.dot  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  CMakeLists_8txt.html  SOURCES_8txt.html  TargetDirectories_8txt.html  annotated.html  build_2conanfile_8txt.html  build_2lib_2cigarfilter_2____init_____8py.html  build_2lib_2cigarfilter_2cigarfilter__config_8py.html  build_2lib_2cigarfilter_2resources_2README_8md.html  build_2lib_2cigarfilter_2resources_2plugin__template_2CMakeLists_8txt.html  build_2lib_2cigarfilter_2resources_2plugin__template_2conanfile_8txt.html  build_2lib_2cigarfilter_2resources_2plugin__template_2src_2cigarfilter__plugin_8hpp.html  build_2lib_2cigarfilter_2resources_2plugin__template_2src_2cigarfilter__plugin_8hpp__incl.dot  build_2lib_2cigarfilter_2resources_2plugin__template_2src_2cigarfilter__plugin_8hpp_source.html  cigarfilter_2____init_____8py.html  cigarfilter_2cigarfilter__config_8py.html  cigarfilter_2resources_2plugin__template_2CMakeLists_8txt.html  cigarfilter_2resources_2plugin__template_2conanfile_8txt.html  cigarfilter_2resources_2plugin__template_2src_2cigarfilter__plugin_8hpp.html  cigarfilter_2resources_2plugin__template_2src_2cigarfilter__plugin_8hpp__incl.dot  cigarfilter_2resources_2plugin__template_2src_2cigarfilter__plugin_8hpp_source.html  cigarfilter_8dir_2link_8txt.html  cigarfilter_8dir_2src_2lib_2CIGAR_8cpp_8o_8d.html  cigarfilter_8dir_2src_2lib_2plugin__helpers_8cpp_8o_8d.html  cigarfilter_8hpp.html  cigarfilter_8hpp__dep__incl.dot  cigarfilter_8hpp__incl.dot  (+174 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  (+41 more)
docs/latex/: CIGAR_8cpp.tex  CIGAR_8cpp.tex.tmp  CIGAR_8cpp__incl.dot  CIGAR_8hpp.tex  CIGAR_8hpp__dep__incl.dot  CIGAR_8hpp__incl.dot  CIGAR_8hpp_source.tex  CIGAR_8t_8cpp.tex  CIGAR_8t_8cpp_8o_8d.tex  CIGAR_8t_8cpp__incl.dot  CIGAR_8t_8cpp_a22267562988b84a060e8ec5bcdf25c2b_cgraph.dot  CIGAR_8t_8cpp_afeaca5af1c9baea7221926c07867fb86_cgraph.dot  CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  CMakeCache_8txt.tex  CMakeLists_8txt.tex  SOURCES_8txt.tex  TargetDirectories_8txt.tex  annotated.tex  build_2conanfile_8txt.tex  build_2lib_2cigarfilter_2____init_____8py.tex  build_2lib_2cigarfilter_2cigarfilter__config_8py.tex  build_2lib_2cigarfilter_2resources_2README_8md.tex  build_2lib_2cigarfilter_2resources_2plugin__template_2CMakeLists_8txt.tex  build_2lib_2cigarfilter_2resources_2plugin__template_2conanfile_8txt.tex  build_2lib_2cigarfilter_2resources_2plugin__template_2src_2cigarfilter__plugin_8hpp.tex  build_2lib_2cigarfilter_2resources_2plugin__template_2src_2cigarfilter__plugin_8hpp__incl.dot  build_2lib_2cigarfilter_2resources_2plugin__template_2src_2cigarfilter__plugin_8hpp_source.tex  cigarfilter_2____init_____8py.tex  cigarfilter_2cigarfilter__config_8py.tex  cigarfilter_2resources_2plugin__template_2CMakeLists_8txt.tex  cigarfilter_2resources_2plugin__template_2conanfile_8txt.tex  cigarfilter_2resources_2plugin__template_2src_2cigarfilter__plugin_8hpp.tex  cigarfilter_2resources_2plugin__template_2src_2cigarfilter__plugin_8hpp__incl.dot  cigarfilter_2resources_2plugin__template_2src_2cigarfilter__plugin_8hpp_source.tex  cigarfilter_8dir_2link_8txt.tex  cigarfilter_8dir_2src_2lib_2CIGAR_8cpp_8o_8d.tex  cigarfilter_8dir_2src_2lib_2plugin__helpers_8cpp_8o_8d.tex  cigarfilter_8hpp.tex  cigarfilter_8hpp__dep__incl.dot  (+159 more)
examples/: README.md  default.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  iterate_groups.cpp
src/executable/: main.cpp
src/lib/: CIGAR.cpp  CIGAR.hpp  cigarfilter.hpp  cigarfilter_plugin.hpp  plugin_helpers.cpp  plugin_helpers.hpp
src/tests/: CIGAR.t.cpp  examples.t.cpp  plugin_helpers.t.cpp
tools/: build_and_coverage_cpp.sh  clean_build_cache_cigarfilter.sh  devbuild.sh  py_cf.py
